Resolves #877 Import: initial import file should be uploaded earlier in CreateProfile popup

--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
@@ -31,7 +31,7 @@
 				</button>
 			</div>
 		</div>
-		@Html.Partial("_CreateOrUpdate", Model)
+		@Html.Partial("_Update", Model)
 	</fieldset>
 }
 @Html.DeleteConfirmation("import-profile-delete")
