Fixed: Adding new shipping method throws an exception

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/_CreateOrUpdateMethod.cshtml
@@ -87,7 +87,13 @@
 
 @helper TabRestrictions()
 {
-	if (Model.FilterConfigurationUrls.Count == 0)
+	if (Model.Id == 0)
+	{
+		<div class="alert alert-warning">
+			@T("Admin.Configuration.Restriction.SaveBeforeEdit")
+		</div>
+	}
+	else if (Model.FilterConfigurationUrls.Count == 0)
 	{
 		<div class="alert alert-info">
 			@T("Admin.Configuration.Shipping.Methods.RestrictionNote")
