--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
@@ -43,6 +43,10 @@
 
             toggleAvatar();
             toggleUsername();
+
+        	$('#@Html.FieldIdFor(model => model.CustomerSettings.CustomerNumberMethod)').change(function () {
+        		$('#pnlCustomerNumberVisibility').toggle($(this).val() !== '@((int)CustomerNumberMethod.Disabled)');
+            }).trigger('change');
         });
 
         function toggleAvatar() {
@@ -76,29 +80,6 @@
                 @Html.ValidationMessageFor(model => model.CustomerSettings.UsernamesEnabled)
             </td>
         </tr>
-
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerSettings.CustomerNumberMethod)
-            </td>
-            <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => Model.CustomerSettings.CustomerNumberMethod)
-                @Html.DropDownListFor(model => model.CustomerSettings.CustomerNumberMethod, Model.CustomerSettings.AvailableCustomerNumberMethods)
-                @Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNumberMethod)
-            </td>
-        </tr>
-
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerSettings.CustomerNumberVisibility)
-            </td>
-            <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => Model.CustomerSettings.CustomerNumberVisibility)
-                @Html.DropDownListFor(model => model.CustomerSettings.CustomerNumberVisibility, Model.CustomerSettings.AvailableCustomerNumberVisibilities)
-                @Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNumberVisibility)
-            </td>
-        </tr>
-
         <tr id="pnlAllowUsersToChangeUsernames">
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.AllowUsersToChangeUsernames)
@@ -117,6 +98,47 @@
                 @Html.ValidationMessageFor(model => model.CustomerSettings.CheckUsernameAvailabilityEnabled)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomerSettings.CustomerNameFormat)
+			</td>
+			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => Model.CustomerSettings.UserRegistrationType)
+				@Html.DropDownListFor(model => model.CustomerSettings.CustomerNameFormat, ((CustomerNameFormat)Model.CustomerSettings.CustomerNameFormat).ToSelectList())
+				@Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNameFormat)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+				@Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+			</td>
+		</tr>
+
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomerSettings.CustomerNumberMethod)
+			</td>
+			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => Model.CustomerSettings.CustomerNumberMethod)
+				@Html.DropDownListFor(model => model.CustomerSettings.CustomerNumberMethod, Model.CustomerSettings.AvailableCustomerNumberMethods)
+				@Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNumberMethod)
+			</td>
+		</tr>
+		<tr id="pnlCustomerNumberVisibility">
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomerSettings.CustomerNumberVisibility)
+			</td>
+			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => Model.CustomerSettings.CustomerNumberVisibility)
+				@Html.DropDownListFor(model => model.CustomerSettings.CustomerNumberVisibility, Model.CustomerSettings.AvailableCustomerNumberVisibilities)
+				@Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNumberVisibility)
+			</td>
+		</tr>
+
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.UserRegistrationType)
@@ -127,6 +149,15 @@
                 @Html.ValidationMessageFor(model => model.CustomerSettings.UserRegistrationType)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomerSettings.DefaultPasswordFormat)
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.CustomerSettings.DefaultPasswordFormat, ((PasswordFormat)Model.CustomerSettings.DefaultPasswordFormat).ToSelectList())
+				@Html.ValidationMessageFor(model => model.CustomerSettings.DefaultPasswordFormat)
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.RegisterCustomerRoleId)
@@ -137,6 +168,7 @@
                 @Html.ValidationMessageFor(model => model.CustomerSettings.RegisterCustomerRoleId)
             </td>
         </tr>
+
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.AllowCustomersToUploadAvatars)
@@ -211,25 +243,6 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerSettings.CustomerNameFormat)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.CustomerSettings.UserRegistrationType)
-                @Html.DropDownListFor(model => model.CustomerSettings.CustomerNameFormat, ((CustomerNameFormat)Model.CustomerSettings.CustomerNameFormat).ToSelectList())
-                @Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNameFormat)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
-                @Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.HideNewsletterBlock)
             </td>
             <td class="adminData">
@@ -246,15 +259,6 @@
                 @Html.ValidationMessageFor(model => model.CustomerSettings.StoreLastVisitedPage)
             </td>
         </tr>
-		<tr>
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.CustomerSettings.DefaultPasswordFormat)
-			</td>
-			<td class="adminData">
-				@Html.DropDownListFor(model => model.CustomerSettings.DefaultPasswordFormat, ((PasswordFormat)Model.CustomerSettings.DefaultPasswordFormat).ToSelectList())
-				@Html.ValidationMessageFor(model => model.CustomerSettings.DefaultPasswordFormat)
-			</td>
-		</tr>
     </table>
 }
 @helper TabCustomerFormFields()
