--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
@@ -10,27 +10,33 @@
 {
 	@Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Payment })
 }
-<div class="page payment-method-page">
+
+@if (!ViewData.ModelState.IsValid)
+{
+	@Html.ValidationSummary()
+}
+
+@Html.Partial("PaymentWallScripting")
+
+<div id="PayPalPlusPage" class="page payment-method-page">
 	<div class="page-title">
 		<h1>@T("Checkout.SelectPaymentMethod")</h1>
 	</div>
 	<div class="page-body checkout-data">
-		hello world!
 		@using (Html.BeginForm())
 		{
 			@Html.Widget("checkout_payment_method_top")
 
-
-
+			<div id="PayPalPlusPaymentWall"></div>
 
 			<div class="select-button clearfix">
 				<a class="btn pull-left" href="@Url.Action("ShippingMethod", "Checkout", new { area = "" })">
 					<i class="fa fa-caret-left"></i>&nbsp;@T("Common.Back")
 				</a>
 
-				<input type="submit" name="nextstep" id="nextstep" style="display:none" />
+				@*TODO: reward points*@
 
-				<button class="btn btn-warning pull-right payment-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
+				<button id="PayPalPlusNextCheckoutStep" class="btn btn-warning pull-right payment-method-next-step-button hide">
 					@T("Checkout.NextButton")&nbsp;<i class="fa fa-caret-right"></i>
 				</button>
 			</div>
@@ -39,9 +45,3 @@
 		}
 	</div>
 </div>
-
-<script>
-	$(function () {
-
-	});
-</script>
