--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWallScripting.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWallScripting.cshtml
@@ -2,42 +2,45 @@
 @model PayPalPlusCheckoutModel
 <script src="https://www.paypalobjects.com/webstatic/ppplus/ppplus.min.js" type="text/javascript"></script>
 <script type="text/javascript">
+	try {
+
+		var ppp = PAYPAL.apps.PPP({
+			approvalUrl: '@Html.Raw(Model.ApprovalUrl)',
+			placeholder: 'PayPalPlusPaymentWall',
+			mode: '@(Model.UseSandbox ? "sandbox" : "live")',
+			country: '@(Model.BillingAddressCountryCode ?? "DE")',
+			buttonLocation: 'outside',
+			language: '@Html.Raw(Model.LanguageCulture ?? "de_DE")',
+			useraction: 'continue',
+			//surcharging: @Model.HasPaymentFee.ToString().ToLower(),
+			//showLoadingIndicator: true,
+			enableContinue: 'PayPalPlusNextCheckoutStep',
+			disableContinue: 'PayPalPlusNextCheckoutStep',
+			//enableContinue: function () {
+			//	$('#PayPalPlusNextCheckoutStep').prop('disabled', false);
+			//},
+			//disableContinue: function () {
+			//	$('#PayPalPlusNextCheckoutStep').prop('disabled', true);
+			//},
+			//onLoad: function () {
+			//	$('#PayPalPlusNextCheckoutStep').fadeIn();
+			//}
+		});
+
+	}
+	catch (e) {
+		alert(e.description);
+	}
+</script>
+<script type="text/javascript">
 	jQuery(document).ready(function () {
 
-		try {
-
-			var ppp = PAYPAL.apps.PPP({
-				"approvalUrl": "@Model.ApprovalUrl",
-				"placeholder": "PayPalPlusPaymentWall",
-				"mode": "@(Model.UseSandbox ? "sandbox" : "live")",
-				"country": "@(Model.BillingAddressCountryCode ?? "DE")",
-				"buttonLocation": "outside",
-				"language": "@(Model.LanguageCulture ?? "de_DE")",
-				"useraction": "continue",
-				"surcharging": @Model.HasPaymentFee.ToString().ToLower(),
-				"showLoadingIndicator": true,
-				"enableContinue": function () {
-					$('#PayPalPlusNextCheckoutStep').prop('disabled', false);
-				},
-				"disableContinue": function () {
-					$('#PayPalPlusNextCheckoutStep').prop('disabled', true);
-				},
-				"onLoad": function () {
-					$('#PayPalPlusNextCheckoutStep').fadeIn();
-				}
-			});
-
-			// next button clicked
-			$('#PayPalPlusNextCheckoutStep').click(function (e) {
-				e.preventDefault();
-				PAYPAL.apps.PPP.doCheckout();
-				return false;
-			});
-
-		}
-		catch (e) {
-			alert(e.description);
-		}
+		// next button clicked
+		$('#PayPalPlusNextCheckoutStep').click(function (e) {
+			e.preventDefault();
+			PAYPAL.apps.PPP.doCheckout();
+			return false;
+		});
 
 	});
 </script>
